# brickops

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  databricks.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: check-and-test.yaml  deploy_to_prod.yaml  publish-package.yml
brickops/: __init__.py  gitutils.py
brickops/databricks/: __init__.py  api.py  context.py  username.py
brickops/datamesh/: naming.py  parsepath.py
brickops/datamesh/cfg/: __init__.py
brickops/datamesh/parsepath/: extractname.py  parse.py
brickops/dataops/: job.py  pipeline.py
brickops/dataops/deploy/: __init__.py  autojob.py  autopipeline.py  nbpath.py  repo.py
brickops/dataops/deploy/buildconfig/: build.py  clusters.py  enrichtasks.py  job_config.py
brickops/dataops/deploy/job/buildconfig/: build.py  clusters.py  enrichtasks.py
brickops/dataops/deploy/pipeline/buildconfig/: __init__.py  build.py  enrichtasks.py  pipeline_config.py
brickops/tools/: cleanup_tools.py
deploy/: deploy_or_update_all_jobs.py
src/databricks/: context.py  username.py
src/datamesh/: naming.py
src/dataops/: __init__.py  job.py
src/dataops/deploy/: autojob.py  nbpath.py  readconfig.py  repo.py
src/dataops/deploy/buildconfig/: __init__.py  build.py  clusters.py  enrichtasks.py  job_config.py
src/tools/: cleanup_tools.py
tests/: conftest.py
tests/.brickopscfg/: config.yml
tests/databricks/: test_api.py
tests/datamesh/: test_cfg.py  test_naming.py
tests/datamesh/fixtures/configs/: default.yml  fullmesh.yml
tests/datamesh/naming/: test_naming.py  test_path.py
tests/dataops/deploy/: test_autojob.py  test_nbpath.py
tests/dataops/deploy/buildconfig/: test_build_job_config.py  test_enrichtasks.py
tests/dataops/deploy/job/buildconfig/: deployment.yml  test_build_job_config.py  test_enrichtasks.py
tests/dataops/deploy/pipeline/buildconfig/: deployment.yml  test_build_pipeline_config.py  test_enrichtasks.py
tools/: cleanup_tools.py
tools/deploy/: deploy_job.json
