[project]
name = "brickops"
version = "0.3.0"
description = "Knowit's dataops library - simplifying building data pipelines in Databricks, for both testing and production use cases. The package enables a workflow where users write their code in notebooks, and then deploy them to a Databricks workspace without stepping on each other's toes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "databricks-connect>=16.0.0",
    "mypy>=1.14.0",
    "pyspark>=3.5.4",
    "pytest>=8.3.4",
    "requests-mock>=1.12.1",
    "ruff>=0.8.4",
    "types-pyyaml>=6.0.12.20241221",
    "types-requests>=2.32.0.20241016",
]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."


[tool.ruff.lint.per-file-ignores]
"./deploy/**.py" = [
    "INP001", # Not a package
    "F821",   # Do not care about undefined variables in notebooks as many are only available when running in databricks.
]